syntax = "proto3";

package com.hedera.hapi.node.addressbook;

// SPDX-License-Identifier: Apache-2.0
option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.addressbook">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "services/basic_types.proto";
import "services/registered_service_endpoint.proto";

/**
 * A transaction body to create a new registered node in the network
 * address book.
 *
 * This transaction, once complete, SHALL add a new registered node to the
 * network state.
 * The new registered node SHALL be visible and discoverable upon
 * completion of this transaction.
 *
 * ### Block Stream Effects
 * None.
 */
message RegisteredNodeCreateTransactionBody {
    /**
     * An administrative key controlled by the node operator.
     * <p>
     * This key MUST sign this transaction.<br/>
     * This key MUST sign each transaction to update this node.<br/>
     * This field MUST contain a valid `Key` value.<br/>
     * This field is REQUIRED and MUST NOT be set to an empty `KeyList`.<br/>
     * It is RECOMMENDED that this key be composed of one or more unique public
     * keys that are not associated with any network account.<br/>
     * This key MAY be a complex key containing `KeyList` or `ThresholdKey`
     * elements, but SHOULD NOT be a contract ID key.
     */
    proto.Key admin_key = 1;

    /**
     * A short description of the node.
     * <p>
     * This value, if set, MUST NOT exceed 100 bytes when encoded as UTF-8.<br/>
     * This field is OPTIONAL.
     */
    string description = 2;

    /**
     * A list of service endpoints for client calls.
     * <p>
     * These endpoints SHALL represent the published endpoints to which
     * clients may submit requests.<br/>
     * Endpoints in this list MAY supply either IP address or FQDN, but MUST
     * NOT supply both values for the same endpoint.<br/>
     * Multiple endpoints in this list MAY resolve to the same interface.<br/>
     * One Registered Node MAY expose endpoints for multiple service types.<br/>
     * This list MUST NOT be empty.<br/>
     * This list MUST NOT contain more than `50` entries.
     */
    repeated RegisteredServiceEndpoint service_endpoint = 3;
}
